--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -3,5 +3,6 @@
   background-color: 'red';
   border: 5px clear rgba(68, 64, 82, 0.37);
   width: 30%;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  margin-left: 45%;
 }
