--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,9 +1,7 @@
 .FormStyle {
-  font-size: 10px;
-  display: block;
-  width: 30%;
-  padding: 5px;
-  border: 5px solid rgba(68, 64, 82, 0.37);
+  width: 95%;
+  padding: 25px;
+  border: 1px dotted rgba(68, 64, 82, 0.37);
 }
 
 .ButtonStyle {
@@ -15,6 +13,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-left: 250px;
 }
 
 .ButtonStyle2 {
@@ -22,8 +21,18 @@
   border: none;
   color: white;
   padding: 10px 22px;
+  margin-top: 40px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+input {
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+
+span {
+  margin-right: 10px;
 }
