--- a/src/pages/UserCard/UserCard.css
+++ b/src/pages/UserCard/UserCard.css
@@ -9,13 +9,14 @@
   width: 60px;
 }
 
-.ButtonStyle {
-  background-color: #4caf50;
+.ProfileButtonStyle {
+  background-color: #6fbee2;
   border: none;
-  color: white;
+  color: black;
   padding: 10px 22px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-top: 10px;
 }
